--- a/index.html
+++ b/index.html
@@ -31,12 +31,21 @@
 <body>
     <a-scene physics="friction: 20; restitution: 20; debug: true">
         <!-- Camera -->
-        <a-camera position="-50 1 -50" geometry="primitive: box" look-controls wasd-controls mouse-cursor></a-camera>
+        <a-camera position="-50 18 -50" geometry="primitive: box" look-controls wasd-controls mouse-cursor></a-camera>
+        <!--
+            position: x y z
+            rotation: x y z
+            width: largeur
+            height: hauteur
+            depth: profondeur
+        -->
 
-        <a-box physics="friction: 20; restitution: 20" position="-49 6 -53.5" width="2" height="12" static-body></a-box>
         <a-box physics="friction: 20; restitution: 20" position="-49.5 3 -52" rotation="0 -90 0" width="2" height="6" static-body></a-box>
-        <a-box physics="friction: 20; restitution: 20" position="-47 3 -53.5" width="2" height="6" static-body></a-box>
-        <a-box physics="friction: 20; restitution: 20" position="-45 1 -53.5" width="2" height="2" static-body></a-box>
+        <a-box physics="friction: 20; restitution: 20" position="-49 6 -53.5" width="2" height="12" depth="1" static-body></a-box>
+        <a-box physics="friction: 20; restitution: 20" position="-47 3 -53.5" width="2" height="6" depth="1" static-body></a-box>
+        <a-box physics="friction: 20; restitution: 20" position="-45 1 -53.5" width="2" height="2" depth="1" static-body></a-box>
+        <a-box physics="friction: 20; restitution: 20" position="-43 1.5 -53.5" width="2" height="3" depth="1" static-body></a-box>
+        <a-box physics="friction: 20; restitution: 20" position="-39 3 -53.5" width="6" height="6" depth="1" static-body></a-box>
 
         <!-- Floor -->
         <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="gray" static-body></a-plane>
