--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 
         <a-camera position="-50 8 -50" look-controls wasd-controls mouse-cursor>
             <a-cursor></a-cursor>
+
+            <a-entity oculus-touch-controls="hand: left"></a-entity>
+            <a-entity oculus-touch-controls="hand: right"></a-entity>
         </a-camera>
     </a-scene>
 
