--- a/index.html
+++ b/index.html
@@ -42,56 +42,29 @@
             <a-cursor></a-cursor>
         </a-camera>
 
-        <a-entity daydream-controls laser-controls="hand: left"></a-entity>
-        <a-entity daydream-controls laser-controls="hand: right"></a-entity>
+        <a-entity daydream-controls="hand: left"></a-entity>
+        <a-entity daydream-controls="hand: right"></a-entity>
 
-        <a-entity gearvr-controls laser-controls="hand: left"></a-entity>
-        <a-entity gearvr-controls laser-controls="hand: right"></a-entity>
+        <a-entity gearvr-controls="hand: left"></a-entity>
+        <a-entity gearvr-controls="hand: right"></a-entity>
 
-        <a-entity oculus-go-controls laser-controls="hand: left"></a-entity>
-        <a-entity oculus-go-controls laser-controls="hand: right"></a-entity>
+        <a-entity oculus-go-controls="hand: left"></a-entity>
+        <a-entity oculus-go-controls="hand: right"></a-entity>
 
-        <a-entity oculus-touch-controls laser-controls="hand: left"></a-entity>
-        <a-entity oculus-touch-controls laser-controls="hand: right"></a-entity>
+        <a-entity oculus-touch-controls="hand: left"></a-entity>
+        <a-entity oculus-touch-controls="hand: right"></a-entity>
 
-        <a-entity vive-controls laser-controls="hand: left"></a-entity>
-        <a-entity vive-controls laser-controls="hand: right"></a-entity>
+        <a-entity vive-controls="hand: left"></a-entity>
+        <a-entity vive-controls="hand: right"></a-entity>
 
-        <a-entity vive-focus-controls laser-controls="hand: left"></a-entity>
-        <a-entity vive-focus-controls laser-controls="hand: right"></a-entity>
+        <a-entity vive-focus-controls="hand: left"></a-entity>
+        <a-entity vive-focus-controls="hand: right"></a-entity>
 
-        <a-entity windows-motion-controls laser-controls="hand: left"></a-entity>
-        <a-entity windows-motion-controls laser-controls="hand: right"></a-entity>
+        <a-entity windows-motion-controls="hand: left"></a-entity>
+        <a-entity windows-motion-controls="hand: right"></a-entity>
 
-        <a-entity id="leftHand" hand-controls="left"></a-entity>
-        <a-entity id="rightHand" hand-controls="right"></a-entity>
+<!--        <a-entity id="leftHand" hand-controls="left"></a-entity>-->
+<!--        <a-entity id="rightHand" hand-controls="right"></a-entity>-->
     </a-scene>
-
-    <!--<a-scene>
-        <a-assets>
-            <img id="boxTexture" src="https://i.imgur.com/mYmmbrp.jpg" />
-            <img id="skyTexture" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg" />
-            <img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg" />
-            <a-asset-item id="cityModel" src="https://cdn.aframe.io/test-models/models/glTF-2.0/virtualcity/VC.gltf"></a-asset-item>
-        </a-assets>
-
-        <a-box src="#boxTexture" position="0 2 -5" rotation="0 45 45" scale="2 2 2"
-               animation__position="property: object3D.position.y; to: 2.2; dir: alternate; dur: 2000; loop: true"
-               animation__mouseenter="property: scale; to: 2.3 2.3 2.3; dur: 300; startEvents: mouseenter"
-               animation__mouseleave="property: scale; to: 2 2 2; dur: 300; startEvents: mouseleave"></a-box>
-
-&lt;!&ndash;        <a-entity gltf-model="#cityModel" modify-materials></a-entity>&ndash;&gt;
-        <a-entity obj-model="#cloud" modify-materials></a-entity>
-
-&lt;!&ndash;        <a-sky src="#skyTexture"></a-sky>&ndash;&gt;
-
-&lt;!&ndash;        <a-plane src="#groundTexture" rotation="-90 0 0" width="30" height="30" static-body></a-plane>&ndash;&gt;
-        <a-light type="ambient" color="#445451"></a-light>
-        <a-light type="point" intensity="2" position="2 4 4"></a-light>
-
-        <a-entity text="value: Hello, A-Frame!; color: #BBB"
-                  position="-0.9 0.2 -3"
-                  scale="1.5 1.5 1.5"></a-entity>
-    </a-scene>-->
 </body>
 </html>
