--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 
             <a-entity windows-motion-controls="hand: left"></a-entity>
             <a-entity windows-motion-controls="hand: right"></a-entity>
-        </a-camera>
 
-<!--        <a-entity id="leftHand" hand-controls="left"></a-entity>-->
-<!--        <a-entity id="rightHand" hand-controls="right"></a-entity>-->
+            <a-entity id="leftHand" hand-controls="left"></a-entity>
+            <a-entity id="rightHand" hand-controls="right"></a-entity>
+        </a-camera>
     </a-scene>
 </body>
 </html>
