--- a/index.html
+++ b/index.html
@@ -38,30 +38,28 @@
 
         <a-sky color="skyblue"></a-sky>
 
-        <a-camera position="-50 8 -50" look-controls wasd-controls mouse-cursor>
-            <a-cursor></a-cursor>
-        </a-camera>
+        <a-camera position="-50 8 -50" look-controls wasd-controls mouse-cursor></a-camera>
 
-        <a-entity daydream-controls="hand: left"></a-entity>
-        <a-entity daydream-controls="hand: right"></a-entity>
+<!--        <a-entity daydream-controls="hand: left"></a-entity>-->
+<!--        <a-entity daydream-controls="hand: right"></a-entity>-->
 
-        <a-entity gearvr-controls="hand: left"></a-entity>
-        <a-entity gearvr-controls="hand: right"></a-entity>
+<!--        <a-entity gearvr-controls="hand: left"></a-entity>-->
+<!--        <a-entity gearvr-controls="hand: right"></a-entity>-->
 
-        <a-entity oculus-go-controls="hand: left"></a-entity>
-        <a-entity oculus-go-controls="hand: right"></a-entity>
+<!--        <a-entity oculus-go-controls="hand: left"></a-entity>-->
+<!--        <a-entity oculus-go-controls="hand: right"></a-entity>-->
 
-        <a-entity oculus-touch-controls="hand: left"></a-entity>
-        <a-entity oculus-touch-controls="hand: right"></a-entity>
+<!--        <a-entity oculus-touch-controls="hand: left"></a-entity>-->
+<!--        <a-entity oculus-touch-controls="hand: right"></a-entity>-->
 
-        <a-entity vive-controls="hand: left"></a-entity>
-        <a-entity vive-controls="hand: right"></a-entity>
+<!--        <a-entity vive-controls="hand: left"></a-entity>-->
+<!--        <a-entity vive-controls="hand: right"></a-entity>-->
 
-        <a-entity vive-focus-controls="hand: left"></a-entity>
-        <a-entity vive-focus-controls="hand: right"></a-entity>
+<!--        <a-entity vive-focus-controls="hand: left"></a-entity>-->
+<!--        <a-entity vive-focus-controls="hand: right"></a-entity>-->
 
-        <a-entity windows-motion-controls="hand: left"></a-entity>
-        <a-entity windows-motion-controls="hand: right"></a-entity>
+<!--        <a-entity windows-motion-controls="hand: left"></a-entity>-->
+<!--        <a-entity windows-motion-controls="hand: right"></a-entity>-->
 
         <a-entity id="leftHand" hand-controls="left"></a-entity>
         <a-entity id="rightHand" hand-controls="right"></a-entity>
