--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
 
         <a-sky color="skyblue"></a-sky>
 
-        <a-camera position="-50 8 -50" look-controls wasd-controls mouse-cursor></a-camera>
-
+        <a-entity>
+            <a-camera look-controls wasd-controls mouse-cursor>
+                <a-entity geometry="primitive: plane; height: 0.2; width: 0.2" position="0 0 -1" material="color: gray; opacity: 0.5"></a-entity>
+            </a-camera>
+        </a-entity>
 <!--        <a-entity daydream-controls="hand: left"></a-entity>-->
 <!--        <a-entity daydream-controls="hand: right"></a-entity>-->
 
