--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Boutique générique VR</title>
@@ -15,13 +15,13 @@
             <a-asset-item id="cloud" src="/models/nuage.obj"></a-asset-item>
         </a-assets>
 
-        <!--
+        &lt;!&ndash;
             position: x y z
             rotation: x y z
             width: largeur
             height: hauteur
             depth: profondeur
-        -->
+        &ndash;&gt;
 
         <a-box physics="friction: 20; restitution: 20" position="-49.5 3 -52" rotation="0 -90 0" width="2" height="6" static-body></a-box>
         <a-box physics="friction: 20; restitution: 20" position="-49 6 -53.5" width="2" height="12" depth="1" static-body></a-box>
@@ -39,33 +39,74 @@
         <a-sky color="skyblue"></a-sky>
 
         <a-entity>
-            <a-camera look-controls wasd-controls mouse-cursor>
+            <a-camera universal-controls kinematic-body>
                 <a-entity geometry="primitive: plane; height: 0.2; width: 0.2" position="0 0 -1" material="color: gray; opacity: 0.5"></a-entity>
             </a-camera>
         </a-entity>
-<!--        <a-entity daydream-controls="hand: left"></a-entity>-->
-<!--        <a-entity daydream-controls="hand: right"></a-entity>-->
+&lt;!&ndash;        <a-entity daydream-controls="hand: left"></a-entity>&ndash;&gt;
+&lt;!&ndash;        <a-entity daydream-controls="hand: right"></a-entity>&ndash;&gt;
 
-<!--        <a-entity gearvr-controls="hand: left"></a-entity>-->
-<!--        <a-entity gearvr-controls="hand: right"></a-entity>-->
+&lt;!&ndash;        <a-entity gearvr-controls="hand: left"></a-entity>&ndash;&gt;
+&lt;!&ndash;        <a-entity gearvr-controls="hand: right"></a-entity>&ndash;&gt;
 
-<!--        <a-entity oculus-go-controls="hand: left"></a-entity>-->
-<!--        <a-entity oculus-go-controls="hand: right"></a-entity>-->
+&lt;!&ndash;        <a-entity oculus-go-controls="hand: left"></a-entity>&ndash;&gt;
+&lt;!&ndash;        <a-entity oculus-go-controls="hand: right"></a-entity>&ndash;&gt;
 
-<!--        <a-entity oculus-touch-controls="hand: left"></a-entity>-->
-<!--        <a-entity oculus-touch-controls="hand: right"></a-entity>-->
+&lt;!&ndash;        <a-entity oculus-touch-controls="hand: left"></a-entity>&ndash;&gt;
+&lt;!&ndash;        <a-entity oculus-touch-controls="hand: right"></a-entity>&ndash;&gt;
 
-<!--        <a-entity vive-controls="hand: left"></a-entity>-->
-<!--        <a-entity vive-controls="hand: right"></a-entity>-->
+&lt;!&ndash;        <a-entity vive-controls="hand: left"></a-entity>&ndash;&gt;
+&lt;!&ndash;        <a-entity vive-controls="hand: right"></a-entity>&ndash;&gt;
 
-<!--        <a-entity vive-focus-controls="hand: left"></a-entity>-->
-<!--        <a-entity vive-focus-controls="hand: right"></a-entity>-->
+&lt;!&ndash;        <a-entity vive-focus-controls="hand: left"></a-entity>&ndash;&gt;
+&lt;!&ndash;        <a-entity vive-focus-controls="hand: right"></a-entity>&ndash;&gt;
 
-<!--        <a-entity windows-motion-controls="hand: left"></a-entity>-->
-<!--        <a-entity windows-motion-controls="hand: right"></a-entity>-->
+&lt;!&ndash;        <a-entity windows-motion-controls="hand: left"></a-entity>&ndash;&gt;
+&lt;!&ndash;        <a-entity windows-motion-controls="hand: right"></a-entity>&ndash;&gt;
 
         <a-entity id="leftHand" hand-controls="left"></a-entity>
         <a-entity id="rightHand" hand-controls="right"></a-entity>
     </a-scene>
+</body>
+</html>-->
+
+<html>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=no,maximum-scale=1">
+    <title>Examples • Walls</title>
+    <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+    <script src="../bundle.js"></script>
+    <script src="//cdn.jsdelivr.net/gh/donmccurdy/aframe-physics-system@v3.2.0/dist/aframe-physics-system.min.js"></script>
+</head>
+<body>
+<a-scene physics renderer="gammaOutput: true">
+    <!-- Player -->
+    <a-entity id="rig" movement-controls kinematic-body rotation="0 -90 0">
+        <a-entity id="camera"
+                  camera
+                  position="0 1.6 0"
+                  look-controls="pointerLockEnabled: true"></a-entity>
+    </a-entity>
+
+    <!-- Ground -->
+    <a-grid static-body></a-grid>
+
+    <!-- Obstacles -->
+    <a-box color="#39BB82"
+           width="15" height="5" depth="3"
+           position="8 2.5 -5"
+           static-body></a-box>
+    <a-box color="#39BB82"
+           width="15" height="5" depth="3"
+           position="8 2.5 5"
+           static-body></a-box>
+
+    <!-- Lighting -->
+    <a-light type="ambient" color="#bbb"></a-light>
+    <a-light color="#ccc" position="0 30 0" distance="100" intensity="0.4" type="point"></a-light>
+    <a-light color="#ccc" position="3 10 -10" distance="50" intensity="0.4" type="point"></a-light>
+</a-scene>
 </body>
 </html>
