--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 </body>-->
 
 <head>
+    <meta charset="utf-8" />
     <title>My A-Frame Scene</title>
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
