--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <meta charset="utf-8" />
     <title>My A-Frame Scene</title>
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
-    <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
+    <script src="https://unpkg.com/aframe-teleport-controls/dist/aframe-teleport-controls.js"></script>
     <script>
 	    /* global AFRAME */
 	    AFRAME.registerShader('skyGradient', {
