--- a/aframe/index.html
+++ b/aframe/index.html
@@ -42,12 +42,10 @@
         <a-entity obj-model="obj: #cloud" position="-40 10 -60" scale="20 0 10" color="white"></a-entity>
         <a-entity class="sol" environment="shadow: true; shadowSize: 10;"></a-entity>
 
-        <a-box id="rig" material="color: transparent;" position="-40 1.6 -50">
-            <a-camera id="camera" universal-controls kinematic-body>
-                <a-entity hand-controls="left" laser-controls raycaster="objects: .building, .sol"></a-entity>
-                <a-entity hand-controls="right" laser-controls raycaster="objects: .building, .sol"></a-entity>
-            </a-camera>
-        </a-box>
+        <a-camera id="camera" position="-40 1.6 -50" universal-controls kinematic-body>
+            <a-entity hand-controls="left" laser-controls raycaster="objects: .building, .sol"></a-entity>
+            <a-entity hand-controls="right" laser-controls raycaster="objects: .building, .sol"></a-entity>
+        </a-camera>
     </a-scene>
 </body>
 </html>
