--- a/aframe/index.html
+++ b/aframe/index.html
@@ -44,8 +44,8 @@
 
         <a-entity id="player">
             <a-camera id="camera" position="-40 1.6 -50" universal-controls kinematic-body></a-camera>
-            <a-entity hand-controls="left" laser-controls raycaster="objects: .building, .sol"></a-entity>
-            <a-entity hand-controls="right" laser-controls raycaster="objects: .building, .sol"></a-entity>
+            <a-entity hand-controls="left" rotation="-90 0 0" laser-controls raycaster="objects: .building, .sol"></a-entity>
+            <a-entity hand-controls="right" rotation="90 0 0" laser-controls raycaster="objects: .building, .sol"></a-entity>
         </a-entity>
     </a-scene>
 </body>
