--- a/aframe/index.html
+++ b/aframe/index.html
@@ -57,7 +57,7 @@
 	    AFRAME.registerComponent('grip-down', {
 		    init: function () {
 			    var el = this.el;
-			    el.addEventListener('gripdonw', function (evt) {
+			    el.addEventListener('gripdown', function (evt) {
 				    el.setAttribute('visible', !el.getAttribute('visible'));
 			    });
 		    }
