--- a/aframe/index.html
+++ b/aframe/index.html
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,16 +63,14 @@
 		    }
 	    });
 
-	    AFRAME.registerComponent('collide', {
+	    /*AFRAME.registerComponent('collide', {
 	    	init: function () {
                 var el = this.el;
                 el.addEventListener('collide', function (evt) {
                     evt.detail.body.el.setAttribute('visible', evt.detail.body.el.getAttribute('visible'));
                 })
 		    }
-        });
-
-        window.addEventListener('load', () => {});
+        });*/
     </script>
 </head>
 <body>
@@ -82,15 +79,15 @@
             <a-asset-item id="cloud" src="../models/nuage.obj"></a-asset-item>
         </a-assets>
 
-        &lt;!&ndash;
+        <!--
             position: x y z
             rotation: x y z
             width: largeur
             height: hauteur
             depth: profondeur
-        &ndash;&gt;
+        -->
 
-        &lt;!&ndash; element collisionné: evt.detail.body.el &ndash;&gt;
+        <!-- element collisionné: evt.detail.body.el -->
 
         <a-box class="building" position="-49.5 3 -52" rotation="0 -90 0" width="2" height="6" toggle collide static-body></a-box>
         <a-box class="building" position="-49 6 -53.5" width="2" height="12" depth="1" toggle collide static-body></a-box>
@@ -108,17 +105,16 @@
 
         <a-entity id="player">
             <a-camera id="camera" position="-40 1.6 -50" universal-controls kinematic-body>
-                <a-cursor visible="false"></a-cursor>
+                <a-entity cursor="type: gaze" visible="false"></a-entity>
             </a-camera>
-            <a-entity hand-controls="left" rotation="-90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" grip-down-listener></a-entity>
-            <a-entity hand-controls="right" rotation="90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" a-button-listener></a-entity>
+            <a-entity hand-controls="left" rotation="-90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor="type: controller" grip-down-listener></a-entity>
+            <a-entity hand-controls="right" rotation="90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor="type: controller" a-button-listener></a-entity>
         </a-entity>
     </a-scene>
 </body>
 </html>
--->
 
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -251,4 +247,4 @@
 	});
 </script>
 </body>
-</html>
+</html>-->
