--- a/aframe/index.html
+++ b/aframe/index.html
@@ -107,8 +107,8 @@
             <a-camera id="camera" position="-40 1.6 -50" universal-controls kinematic-body>
                 <a-entity cursor="type: gaze" visible="false"></a-entity>
             </a-camera>
-            <a-entity hand-controls="left" rotation="-90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor="type: controller" grip-down-listener></a-entity>
-            <a-entity hand-controls="right" rotation="90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor="type: controller" a-button-listener></a-entity>
+            <a-entity hand-controls="left" rotation="-90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor grip-down-listener></a-entity>
+            <a-entity hand-controls="right" rotation="90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor a-button-listener></a-entity>
         </a-entity>
     </a-scene>
 </body>
