--- a/aframe/index.html
+++ b/aframe/index.html
@@ -30,9 +30,15 @@
 		    	var callbacks = {
 				    onHover: function () {
 					    el.setAttribute('color', 'blue');
+					    el.addEventListener('click', () => {
+					    	el.setAttribute('visible', !el.setAttribute('visible'));
+                        });
 				    },
 				    onOut: function () {
 					    el.setAttribute('color', 'white');
+					    el.removeEventListener('click', () => {
+						    el.setAttribute('visible', !el.setAttribute('visible'));
+					    });
 				    }
                 };
 
@@ -45,7 +51,7 @@
 		    }
 	    });
 
-	    AFRAME.registerComponent('a-button-listener', {
+	    /*AFRAME.registerComponent('a-button-listener', {
 		    init: function () {
 			    var el = this.el;
 			    el.addEventListener('abuttondown', function (evt) {
@@ -61,7 +67,7 @@
 				    evt.detail.body.el.setAttribute('visible', evt.detail.body.el.getAttribute('visible'));
 			    });
 		    }
-	    });
+	    });*/
 
 	    /*AFRAME.registerComponent('collide', {
 	    	init: function () {
@@ -107,8 +113,8 @@
             <a-camera id="camera" position="-40 1.6 -50" universal-controls kinematic-body>
                 <a-entity cursor="type: gaze" visible="false"></a-entity>
             </a-camera>
-            <a-entity hand-controls="left" rotation="-90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor grip-down-listener></a-entity>
-            <a-entity hand-controls="right" rotation="90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor a-button-listener></a-entity>
+            <a-entity hand-controls="left" rotation="-90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor></a-entity>
+            <a-entity hand-controls="right" rotation="90 0 0" super-hands laser-controls raycaster="objects: .building, .sol" cursor></a-entity>
         </a-entity>
     </a-scene>
 </body>
